# app/models/Authorization.scala
@@ -16,13 +16,19 @@ case class DBOAuth2Info(id: Option[Long], accessToken: String, tokenType: Option
 /**
   * Short term authorization code (10 min MAX), that can be exchanged to access token or
   * refresh token.
+  * Auth code consists of 2 parts separated by underscore:
+  *  * id part used to lookup code
+  *  * secret part that is only returned to user, but only a hash of it stored in the DB
+  *    used to validate code.
   */                    
 case class AuthCode(userId: String,
-                        scope: Option[String],
-                        expirationTime: LocalDateTime,
-                        clientId: String,
-                        id: String = RandomStringGenerator.generateSecret(64),
-                        requestedTime: LocalDateTime = LocalDateTime.now()) {
+                    scope: Option[String],
+                    expirationTime: LocalDateTime,
+                    clientId: String,
+                    secretHash: String,
+                    id: String = RandomStringGenerator.generateSecret(64),                    
+                    requestedTime: LocalDateTime = LocalDateTime.now(),
+                    sign: String = "") {
   def expireIn: Int = ((expirationTime.toInstant(ZoneOffset.UTC).toEpochMilli / 1000) - LocalDateTime.now().toInstant(ZoneOffset.UTC).getEpochSecond).toInt
   def expired: Boolean = expirationTime.isBefore(LocalDateTime.now())
 }
@@ -30,12 +36,18 @@ case class AuthCode(userId: String,
 /**
   * Long term Refresh token, that can be used in TokenController.getAccessToken to 
   * obtain an access token.
+  * Refresh token consists of 2 parts separated by underscore:
+  *  * id part used to lookup token
+  *  * secret part that is only returned to user, but only a hash of it stored in the DB
+  *    used to validate token
   */
 case class RefreshToken(userId: String,
                         scope: Option[String],
                         expirationTime: LocalDateTime,
                         clientId: String,
-                        @BsonProperty("_id") id: String = RandomStringGenerator.generateSecret(64),
+                        secretHash: String,
+                        sign: String = "",
+                        @BsonProperty("_id") id: String = RandomStringGenerator.generateSecret(32),
                         requestedTime: LocalDateTime = LocalDateTime.now()) {
   def expired: Boolean = expirationTime.isBefore(LocalDateTime.now())
 }
